--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ionic-selectable": "^3.0.3",
     "ionicons": "3.0.0",
     "leaflet": "^1.3.4",
+    "moment": "^2.22.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
