--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-rating": "^1.0.6",
     "ionic-selectable": "^3.0.3",
     "ionicons": "3.0.0",
     "leaflet": "^1.3.4",
