--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
+    "@ionic/app-scripts": "3.2.0",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
@@ -37,15 +38,13 @@
     "ionic-rating": "^1.0.6",
     "ionic-selectable": "^3.0.3",
     "ionicons": "3.0.0",
+    "jwt-decode": "^2.2.0",
     "leaflet": "^1.3.4",
     "moment": "^2.22.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "typescript": "~2.6.2",
     "zone.js": "0.8.26"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.0",
-    "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
