--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "start": "npm run build-prod && npm run serve-prod",
+    "start": "npm run serve-prod",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
