--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
-    "build-prod": "ionic-app-scripts build --prod",
+    "build-prod": "ionic-app-scripts build --prod --livereload",
     "serve-prod": "node deploy/app.js"
   },
   "dependencies": {
